--- a/indix.html
+++ b/indix.html
@@ -116,5 +116,6 @@
                 </div>
             </div>
         </div>
+        <h1>hi every one its a simple test on my tablet if its works i will be very happy</h1>
     </body>
 </html>
